# automation-project

./: .pre-commit-config.yaml  README.md  assistant.py  main.py  pyproject.toml
