[tool.poetry]
name = "project-1"
version = "0.1.0"
description = ""
authors = ["Victor Zucchetti <victorzucchetti@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyautogui = "^0.9.54"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
